--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~21.1.0",
-    "@angular/common": "~21.1.0",
-    "@angular/compiler": "~21.1.0",
-    "@angular/core": "~21.1.0",
-    "@angular/forms": "~21.1.0",
-    "@angular/platform-browser": "~21.1.0",
-    "@angular/platform-server": "~21.1.0",
-    "@angular/router": "~21.1.0",
-    "@angular/ssr": "~21.1.0",
-    "express": "^4.21.2",
-    "rxjs": "~7.8.0"
+    "@angular-devkit/build-angular": "~21.1.2",
+    "@angular/common": "21.2.0-next.0",
+    "@angular/compiler": "21.2.0-next.0",
+    "@angular/core": "21.2.0-next.0",
+    "@angular/forms": "21.2.0-next.0",
+    "@angular/platform-browser": "21.2.0-next.0",
+    "@angular/platform-server": "21.2.0-next.0",
+    "@angular/router": "21.2.0-next.0",
+    "@angular/ssr": "~21.1.2",
+    "express": "^5.2.1",
+    "rxjs": "~7.8.2"
   },
   "devDependencies": {
-    "@analogjs/vite-plugin-angular": "~2.1.2",
-    "@analogjs/vitest-angular": "~2.1.2",
-    "@angular-devkit/core": "~21.1.0",
-    "@angular-devkit/schematics": "~21.1.0",
-    "@angular/build": "~21.1.0",
-    "@angular/cli": "~21.1.0",
-    "@angular/compiler-cli": "~21.1.0",
-    "@angular/language-service": "~21.1.0",
-    "@eslint/js": "^9.8.0",
+    "@analogjs/vite-plugin-angular": "~2.1.3",
+    "@analogjs/vitest-angular": "~2.1.3",
+    "@angular-devkit/core": "~21.1.2",
+    "@angular-devkit/schematics": "~21.1.2",
+    "@angular/build": "~21.1.2",
+    "@angular/cli": "~21.1.2",
+    "@angular/compiler-cli": "21.2.0-next.0",
+    "@angular/language-service": "21.2.0-next.0",
+    "@eslint/js": "^9.39.2",
     "@nx/angular": "22.5.0-beta.1",
     "@nx/devkit": "22.5.0-beta.1",
     "@nx/eslint": "22.5.0-beta.1",
@@ -37,27 +37,38 @@
     "@nx/vitest": "22.5.0-beta.1",
     "@nx/web": "22.5.0-beta.1",
     "@nx/workspace": "22.5.0-beta.1",
-    "@playwright/test": "^1.36.0",
-    "@schematics/angular": "~21.1.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/express": "^4.17.21",
+    "@playwright/test": "^1.58.0",
+    "@schematics/angular": "~21.1.2",
+    "@swc-node/register": "~1.9.2",
+    "@swc/core": "~1.5.29",
+    "@swc/helpers": "~0.5.18",
+    "@types/express": "^5.0.6",
     "@types/node": "20.19.9",
-    "@typescript-eslint/utils": "^8.40.0",
-    "@vitest/coverage-v8": "^4.0.0",
-    "@vitest/ui": "^4.0.8",
-    "angular-eslint": "^21.0.1",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^10.0.0",
-    "eslint-plugin-playwright": "^1.6.2",
-    "jsdom": "^27.1.0",
+    "@typescript-eslint/utils": "^8.54.0",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/ui": "^4.0.18",
+    "angular-eslint": "^21.1.0",
+    "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-playwright": "^1.8.3",
+    "jsdom": "^27.4.0",
+    "jsonc-eslint-parser": "^2.4.2",
+    "ng-packagr": "~21.1.0",
     "nx": "22.5.0-beta.1",
-    "prettier": "~3.6.2",
-    "tslib": "^2.3.0",
-    "typescript": "~5.9.2",
-    "typescript-eslint": "^8.40.0",
-    "vite": "^7.0.0",
-    "vitest": "^4.0.8"
+    "postcss": "^8.5.6",
+    "postcss-url": "~10.1.3",
+    "prettier": "^3.8.1",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tslib": "^2.8.1",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.54.0",
+    "verdaccio": "^6.2.4",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
