--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@ng-proto/source",
   "version": "0.0.0",
   "license": "MIT",
+  "packageManager": "pnpm@10.26.1",
   "scripts": {
     "prepare": "husky",
     "format": "prettier --write .",
