chore: rename ng-proto to angular-proto and add LICENSE file
- Updated all instances of 'ng-proto' to 'angular-proto' across documentation and configuration files for consistency.
- Added a LICENSE file with MIT License details to clarify usage rights.
- Introduced GitHub issue and pull request templates to streamline contributions and bug reporting.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ng-proto/source",
+  "name": "@angular-proto/source",
   "version": "0.0.0",
   "license": "MIT",
   "packageManager": "pnpm@10.26.1",
