--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,19 +15,19 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@ng-proto/core": ["src/core/src/index.ts"],
-      "@ng-proto/core/focus": ["src/core/focus/src/index.ts"],
-      "@ng-proto/core/focus-visible": ["src/core/focus-visible/src/index.ts"],
-      "@ng-proto/core/hover": ["src/core/hover/src/index.ts"],
-      "@ng-proto/core/press": ["src/core/press/src/index.ts"],
-      "@ng-proto/core/disable": ["src/core/disable/src/index.ts"],
-      "@ng-proto/primitives": ["src/primitives/src/index.ts"],
-      "@ng-proto/core/button": ["src/core/button/src/index.ts"],
-      "@ng-proto/primitives/button": ["src/primitives/button/src/index.ts"],
-      "@ng-proto/core/utils": ["src/core/utils/src/index.ts"],
-      "@ng-proto/core/interact": ["src/core/interact/src/index.ts"],
-      "@ng-proto/core/anchor": ["src/core/anchor/src/index.ts"],
-      "@ng-proto/primitives/tooltip": ["src/primitives/tooltip/src/index.ts"]
+      "@angular-proto/core": ["src/core/src/index.ts"],
+      "@angular-proto/core/focus": ["src/core/focus/src/index.ts"],
+      "@angular-proto/core/focus-visible": ["src/core/focus-visible/src/index.ts"],
+      "@angular-proto/core/hover": ["src/core/hover/src/index.ts"],
+      "@angular-proto/core/press": ["src/core/press/src/index.ts"],
+      "@angular-proto/core/disable": ["src/core/disable/src/index.ts"],
+      "@angular-proto/primitives": ["src/primitives/src/index.ts"],
+      "@angular-proto/core/button": ["src/core/button/src/index.ts"],
+      "@angular-proto/primitives/button": ["src/primitives/button/src/index.ts"],
+      "@angular-proto/core/utils": ["src/core/utils/src/index.ts"],
+      "@angular-proto/core/interact": ["src/core/interact/src/index.ts"],
+      "@angular-proto/core/anchor": ["src/core/anchor/src/index.ts"],
+      "@angular-proto/primitives/tooltip": ["src/primitives/tooltip/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
