chore: refactor proto system and update configurations
- Refactored the proto system to utilize a factory pattern for creating protocols, enhancing clarity and maintainability in the directive implementations.
- Updated the documentation in CLAUDE.md to reflect changes in the proto system and provide clearer examples of usage.
- Modified ESLint configurations to improve project organization by adjusting source tags and adding new rules for better dependency management.
- Updated package.json and pnpm-lock.yaml to reflect new dependency versions and ensure consistency across the project.
- Enhanced the test setup for the docs application, including the addition of a new test-setup.ts file for improved testing practices.
- Made various adjustments to the hover and anchor directives to align with the new proto structure, ensuring proper state management and configuration handling.

--- a/src/ui/tsconfig.lib.json
+++ b/src/ui/tsconfig.lib.json
@@ -2,29 +2,24 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": [
-      "vitest/globals",
-      "vitest/importMeta",
-      "vite/client",
-      "node",
-      "vitest",
-      "@testing-library/jest-dom/vitest"
-    ]
+    "declaration": true,
+    "declarationMap": true,
+    "inlineSources": true,
+    "types": []
   },
-  "include": [
+  "include": ["**/*.ts"],
+  "exclude": [
+    "**/*.spec.ts",
+    "**/*.test.ts",
     "vite.config.ts",
     "vite.config.mts",
     "vitest.config.ts",
     "vitest.config.mts",
-    "**/*.test.ts",
-    "**/*.spec.ts",
     "**/*.test.tsx",
     "**/*.spec.tsx",
     "**/*.test.js",
     "**/*.spec.js",
     "**/*.test.jsx",
-    "**/*.spec.jsx",
-    "**/*.d.ts"
-  ],
-  "files": ["test-setup.ts"]
+    "**/*.spec.jsx"
+  ]
 }
