--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "21.2.0-next.0",
-    "@angular/cdk": "21.2.0-next.1",
+    "@angular/cdk": "21.2.0-next.2",
     "@angular/common": "21.2.0-next.1",
     "@angular/compiler": "21.2.0-next.1",
     "@angular/core": "21.2.0-next.1",
@@ -53,21 +53,22 @@
     "@angular/compiler-cli": "21.2.0-next.1",
     "@angular/language-service": "21.2.0-next.1",
     "@eslint/js": "^9.39.2",
-    "@nx/angular": "22.5.0-beta.1",
-    "@nx/devkit": "22.5.0-beta.1",
-    "@nx/eslint": "22.5.0-beta.1",
-    "@nx/eslint-plugin": "22.5.0-beta.1",
-    "@nx/js": "22.5.0-beta.1",
-    "@nx/playwright": "22.5.0-beta.1",
-    "@nx/vite": "22.5.0-beta.1",
-    "@nx/vitest": "22.5.0-beta.1",
-    "@nx/web": "22.5.0-beta.1",
-    "@nx/workspace": "22.5.0-beta.1",
+    "@nx/angular": "22.5.0-beta.2",
+    "@nx/devkit": "22.5.0-beta.2",
+    "@nx/eslint": "22.5.0-beta.2",
+    "@nx/eslint-plugin": "22.5.0-beta.2",
+    "@nx/js": "22.5.0-beta.2",
+    "@nx/playwright": "22.5.0-beta.2",
+    "@nx/vite": "22.5.0-beta.2",
+    "@nx/vitest": "22.5.0-beta.2",
+    "@nx/web": "22.5.0-beta.2",
+    "@nx/workspace": "22.5.0-beta.2",
     "@playwright/test": "^1.58.0",
     "@schematics/angular": "~21.1.2",
-    "@swc-node/register": "~1.9.2",
-    "@swc/core": "~1.5.29",
-    "@swc/helpers": "~0.5.18",
+    "@swc-node/register": "1.11.1",
+    "@swc/core": "1.15.8",
+    "@swc/helpers": "0.5.18",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
     "@testing-library/angular": "^19.0.0",
     "@testing-library/jest-dom": "^6.9.1",
@@ -77,7 +78,7 @@
     "@typescript-eslint/utils": "^8.54.0",
     "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.18",
-    "angular-eslint": "^21.1.0",
+    "angular-eslint": "^21.2.0",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
@@ -87,7 +88,7 @@
     "jsonc-eslint-parser": "^2.4.2",
     "lint-staged": "^16.2.7",
     "ng-packagr": "~21.1.0",
-    "nx": "22.5.0-beta.1",
+    "nx": "22.5.0-beta.2",
     "postcss": "^8.5.6",
     "postcss-url": "~10.1.3",
     "prettier": "^3.8.1",
