--- a/src/core/tsconfig.lib.json
+++ b/src/core/tsconfig.lib.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": ["node"]
+    "types": []
   },
   "include": ["**/*.ts"],
   "exclude": [
