--- a/src/primitives/package.json
+++ b/src/primitives/package.json
@@ -4,7 +4,8 @@
   "peerDependencies": {
     "@angular/core": "^21.1.0",
     "@angular/compiler": "21.2.0-next.0",
-    "@angular/common": "21.2.0-next.1"
+    "@angular/common": "21.2.0-next.1",
+    "@angular-proto/core": "0.0.1"
   },
   "sideEffects": false
 }
