--- a/src/primitives/tsconfig.spec.json
+++ b/src/primitives/tsconfig.spec.json
@@ -16,15 +16,15 @@
     "vite.config.mts",
     "vitest.config.ts",
     "vitest.config.mts",
-    "./**/*.test.ts",
-    "./**/*.spec.ts",
-    "./**/*.test.tsx",
-    "./**/*.spec.tsx",
-    "./**/*.test.js",
-    "./**/*.spec.js",
-    "./**/*.test.jsx",
-    "./**/*.spec.jsx",
-    "./**/*.d.ts"
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "**/*.test.tsx",
+    "**/*.spec.tsx",
+    "**/*.test.js",
+    "**/*.spec.js",
+    "**/*.test.jsx",
+    "**/*.spec.jsx",
+    "**/*.d.ts"
   ],
   "files": ["test-setup.ts"]
 }
